[REFACTOR]Response 리팩토링